--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,14 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        buildConfigField 'String', 'CITIES_URL', '"https://raw.githubusercontent.com/meugen/cities-navigator/master/json/cities.json"'
+        buildConfigField 'String', 'COUNTRIES_URL', '"https://raw.githubusercontent.com/meugen/cities-navigator/master/json/countries.json"'
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -23,7 +27,13 @@ android {
 dependencies {
     implementation "${packages.kotlin}:kotlin-stdlib-jdk7:${versions.kotlin}"
     implementation "com.crashlytics.sdk.android:crashlytics:2.9.4"
+    implementation "com.jakewharton.timber:timber:4.7.1"
+
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "org.koin:koin-android-architecture:0.9.3"
+
     implementation "${packages.support}:appcompat-v7:${versions.support}"
+    implementation "${packages.support}:recyclerview-v7:${versions.support}"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
