--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,11 @@ android {
     }
 }
 
+kotlin.experimental.coroutines 'enable'
+
 dependencies {
     implementation "${packages.kotlin}:kotlin-stdlib-jdk7:${versions.kotlin}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.24.0"
     implementation "com.crashlytics.sdk.android:crashlytics:2.9.4"
     implementation "com.jakewharton.timber:timber:4.7.1"
 
