--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation "com.crashlytics.sdk.android:crashlytics:2.9.4"
     implementation "com.jakewharton.timber:timber:4.7.1"
 
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "${packages.lifecycle}:extensions:${versions.lifecycle}"
     implementation "org.koin:koin-android-architecture:0.9.3"
 
     implementation "${packages.support}:appcompat-v7:${versions.support}"
