--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@
 buildscript {
     ext.packages = [
             kotlin: 'org.jetbrains.kotlin',
-            support: 'com.android.support']
+            support: 'com.android.support',
+            lifecycle: 'android.arch.lifecycle']
     ext.versions = [
             kotlin: '1.2.51',
-            support: '27.1.1']
+            support: '27.1.1',
+            lifecycle: '1.1.1']
     repositories {
         google()
         jcenter()
