--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,13 @@ buildscript {
     ext.packages = [
             kotlin: 'org.jetbrains.kotlin',
             support: 'com.android.support',
-            lifecycle: 'android.arch.lifecycle']
+            lifecycle: 'android.arch.lifecycle',
+            okhttp: 'com.squareup.okhttp3']
     ext.versions = [
             kotlin: '1.2.51',
             support: '27.1.1',
-            lifecycle: '1.1.1']
+            lifecycle: '1.1.1',
+            okhttp: '3.11.0']
     repositories {
         google()
         jcenter()
