--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ dependencies {
     implementation "${packages.support}:appcompat-v7:${versions.support}"
     implementation "${packages.support}:recyclerview-v7:${versions.support}"
 
+    implementation("${packages.play_services}:play-services-maps:${versions.play_services}") {
+        exclude group: packages.support, module: 'support-v4'
+    }
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
