--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,14 @@ buildscript {
             kotlin: 'org.jetbrains.kotlin',
             support: 'com.android.support',
             lifecycle: 'android.arch.lifecycle',
-            okhttp: 'com.squareup.okhttp3']
+            okhttp: 'com.squareup.okhttp3',
+            play_services: 'com.google.android.gms']
     ext.versions = [
             kotlin: '1.2.51',
             support: '27.1.1',
             lifecycle: '1.1.1',
-            okhttp: '3.11.0']
+            okhttp: '3.11.0',
+            play_services: '15.0.1']
     repositories {
         google()
         jcenter()
