--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,19 +44,24 @@ dependencies {
     implementation "${packages.kotlin}:kotlin-stdlib-jdk7:${versions.kotlin}"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.24.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+
     implementation "${packages.lifecycle}:extensions:${versions.lifecycle}"
     implementation 'org.koin:koin-android-architecture:0.9.3'
+
     implementation "${packages.okhttp}:okhttp:${versions.okhttp}"
     implementation "${packages.okhttp}:logging-interceptor:${versions.okhttp}"
+
     implementation "${packages.support}:appcompat-v7:${versions.support}"
     implementation "${packages.support}:recyclerview-v7:${versions.support}"
+    implementation "${packages.paging}:runtime:${versions.paging}"
+
     implementation("${packages.play_services}:play-services-maps:${versions.play_services}") {
         exclude group: packages.support, module: 'support-v4'
     }
-    implementation "${packages.paging}:runtime:${versions.paging}"
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    testImplementation "${packages.junit}:junit:${versions.junit}"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
